--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~38.0.8",
     "expo-cli": "^3.28.1",
     "expo-font": "~8.2.1",
+    "expo-linear-gradient": "^8.3.1",
     "expo-status-bar": "^1.0.2",
     "express": "^4.17.1",
     "glamor": "^2.20.40",
@@ -36,6 +37,7 @@
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-ionicons": "^4.6.5",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-phone-input": "^0.2.4",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
